# Gesture-Prediction-Using-DQN-Based-on-sEMG-Signals

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.yaml
scripts/: compare_logs.py  train.py
src/gesture_dqn/: __init__.py  comparison.py  config.py  environment.py  models.py  replay_buffer.py  training.py
tests/: test_environment.py
